Bug 448590 - 'Add to Desktop' option is missing from context menu of Kickoff
Summary: 'Add to Desktop' option is missing from context menu of Kickoff
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: regression
: 448805 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-16 10:57 UTC by Patrick Silva
Modified: 2022-01-20 13:03 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
screenshot (118.90 KB, image/png)
2022-01-16 11:26 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-16 10:57:48 UTC
SUMMARY
Can reproduce on Arch (Plasma 5.24 beta) and neon unstable.

STEPS TO REPRODUCE
1. search for a KCM or app with Kickoff
2. right-click on the KCM/app you have searched for
3. 

OBSERVED RESULT
context menu does not have 'Add to Desktop' option

EXPECTED RESULT
context menu should have 'Add to Desktop' option

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Patrick Silva 2022-01-16 11:05:13 UTC
Kicker and Dashboard are also affected.
Comment 2 Patrick Silva 2022-01-16 11:26:59 UTC
Created attachment 145534 [details]
screenshot
Comment 3 tagwerk19 2022-01-16 12:00:02 UTC
(In reply to Patrick Silva from comment #0)
> OBSERVED RESULT
> context menu does not have 'Add to Desktop' option
Can confirm, thought it was just me...
The issue is there in Neon Unstable, haven't seen it appear in Neon Testing...
Comment 4 tagwerk19 2022-01-17 08:13:38 UTC
(In reply to tagwerk19 from comment #3)
> ... haven't seen it appear in Neon Testing...
The issue has just appeared on Neon Testing - with the updates of the last days.

I'm guessing it's part of plasma-widgets-addons?

"apt list plasma-widgets-addons" from the working system gave:
    plasma-widgets-addons/focal,now 4:5.23.5+p20.04+tstable+git20220114.0129-0 amd64 [installed,automatic]
Now:
    plasma-widgets-addons/focal,now 4:5.23.5+p20.04+tstable+git20220115.0018-0 amd64 [installed,automatic]
Comment 6 Bug Janitor Service 2022-01-17 19:06:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/435
Comment 7 Bug Janitor Service 2022-01-17 20:35:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1371
Comment 8 Alexander Lohnau 2022-01-17 21:53:01 UTC
Git commit dde8ccf57ff1a599d13ec297ba902d468e499cf5 by Alexander Lohnau.
Committed on 17/01/2022 at 20:32.
Pushed by ngraham into branch 'Plasma/5.24'.

Revert plasma-frameworks porting of Plasma::Corona:::containmentForScreen

https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/435 Fixes this in frameworks, however
Plasma 5.24 depends on the already released frameworks 5.90.

M  +5    -3    applets/kicker/plugin/containmentinterface.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/dde8ccf57ff1a599d13ec297ba902d468e499cf5
Comment 9 Alexander Lohnau 2022-01-19 11:34:23 UTC
Git commit e9ba0c54f2c01bb530370c16502cf304fc18b3f6 by Alexander Lohnau.
Committed on 17/01/2022 at 19:04.
Pushed by alex into branch 'master'.

Corona::containmentForScreen: Ignore activities when an empty string is used

With the other overloads being deprecated, consumers are forced to put in an empty string
for the activity. As one can see in the pre-existing code, an empty string indicates
that the activity should be ignored. Consequently we should skip the activity check, when
we got an empty string.

M  +1    -1    src/plasma/corona.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/e9ba0c54f2c01bb530370c16502cf304fc18b3f6
Comment 10 Nicolas Fella 2022-01-20 13:03:16 UTC
*** Bug 448805 has been marked as a duplicate of this bug. ***