Corona::containmentForScreen: Ignore activities when an empty string is used

With the other overloads being deprecated, consumers are forced to put in an empty string
for the activity. As one can see in the pre-existing code, an empty string indicates
that the activity should be ignored. Consequently we should skip the activity check, when
we got an empty string.

BUG: 448590